Numerous resume updates

--- a/AdamRahman_Resume_2page.tex
+++ b/AdamRahman_Resume_2page.tex
@@ -186,32 +186,32 @@
     \section{education}
     \eduentry{Sept. 2016 -- May 2019}
     {Wesleyan University}
-    {B.A. Computer Science, Theater; 3.36/4.0}
+    {B.A. Computer Science, Theater; GPA: 3.36/4.0}
     {\\ Graduated May 2019; Patricelli Center Fellow; Deans' List Spring 2017\\
     \textbf{Relevant Coursework:} Algorithms \& Complexity, Computer Networks, Design of \\ Programming Languages, Randomized Algorithms, Proseminar in Audiovisual\\Machine Learning, Patricelli Center Fellowship}
 
-    \eduentry{Sept. 2012 -- May 2016}
+    \eduentry{Sept. 2012 -- June 2016}
     {Stuyvesant High School}
-    {High School Diploma; 94/100}
-    {\\ Graduated June 2016; Highest Honors in Latin; Varsity Lincoln-Douglas Debate}
+    {High School Diploma}
+    {\\ Graduated June 2016; Arista National Honor Society; Varsity Lincoln-Douglas Debate}
 
-    \section{work experience}
+    \section{experience}
     \expentry{July 2020}
     {Present}
     {IBM}
-    {Staff Software Engineer}
+    {Staff Software Developer}
     {
         \begin{itemize}
           \setlength\itemsep{-0.5mm}
             \item Develops, executes, and maintains continuous integration and regression tests
             for IBM Z mainframe software components, including Docker containers running via IBM z/OS Container
             Extensions (zCX), IBM zCX Foundation for Red Hat OpenShift,  and z/OS Management Facility RESTful APIs
-            \item Conducts infrastructure orchestration for Continuous Integration test automation with Ansible and Jenkins to run
-            health checks, load/stress tests, customer workloads across a series of on-premise mainframe test hardware and IBM Wazi as a Service virtual machines on IBM Cloud
-            \item Develops and ports test utilities with Metal C, z/OS High Level Assembler, and Golang to exploit z/OS services for testing and run open-source tools like Grafana k6 natively
+            \item Orchestrates test automation infrastructure with Ansible and Jenkins to execute and monitor
+            health checks, load/stress tests, and customer workloads across a series of on-premise mainframe test hardware and IBM Wazi as a Service Virtual Machines on IBM Cloud
+            \item Develops and ports test utilities with Metal C, z/OS High Level Assembler, and Golang to exploit and test z/OS services and run open-source tools such as Grafana k6 and Locust natively
             \item Conducts daily monitoring and maintenance of mainframe test systems,
-            including mounting filesystems, installing products including Conda, Nodejs,
-            and OpenShift, and troubleshooting system dumps and traces in coordination
+            including mounting filesystems, installing products such as Conda, Node.js,
+            and Z Open Automation Utilities, and troubleshooting system dumps and traces in coordination
             with other developers and testers
         \end{itemize}
         
@@ -221,11 +221,11 @@
     \expentry{Sept. 2019}
     {Nov. 2019}
     {Buildly}
-    {Software Developer, Intern}
+    {Software Development Intern}
     {
         \begin{itemize}
           \setlength\itemsep{-0.5mm}
-          \item Implemented bugfixes, wrote unit tests, and refactored features for Buildly's Django backend in order to connect multiple microservices to a single endpoint, manage multiple databases, and incorporate self-documenting API specifications with Swagger UI
+          \item Worked in a remote team to implement bugfixes, write unit tests, and refactor features for Buildly's Django backend in order to connect multiple microservices to a single endpoint, manage several databases, and incorporate self-documenting API specifications with Swagger UI
           \item Maintained end-to-end test suite for Buildy's frontend and backend with the Robot framework
           \item Communicated with CEO and CTO daily about product roadmap and development guidelines
         \end{itemize}
@@ -233,30 +233,29 @@
     }
 
     \expentry{Sept. 2019}
-    {Nov. 2019}
+    {Dec. 2019}
     {Kite.com}
     {Python Code Curator}
     {
         \begin{itemize}
           \setlength\itemsep{-0.5mm}
-          \item Composed over 30 code samples with accompanying tutorials in Markdown, adhering to Python best practices to answer the most frequently asked programming questions
+          \item Composed over 30 code samples with accompanying tutorials in Markdown, adhering to Python best practices, to answer the most frequently asked programming questions
           \item Coordinated remotely with teammates across the U.S. to review and verify code samples
          \end{itemize}
         
     }
 
-
     \expentry{Dec. 2018}
     {Feb. 2019}
     {UNICEF}
-    {Software Developer, Intern}
+    {Software Development Intern}
     {
         \begin{itemize}{\leftmargin=0.5em \itemindent=0em}
           \setlength\itemsep{-0.5mm}
-          \item Implemented utilites to retrieve road networks for countries and compute distances between school and health facility coordinates extracted from large geospatial datasets 
-          \item Optimized algorithm performance to improve computation speed by hundreds of times across millions of geospatial points by researching and incorporating fast Python libraries
-          \item Demoed pipeline to team members and published \href{https://github.com/unicef/magicbox-download-roads}{road retrieval code} to UNICEF's official GitHub
-          \item Provisioned a \href{https://hub.docker.com/r/msradam/magicbox-tools}{Docker image} bundled with pipeline code and requisite libraries intended for Magicbox developers and data scientists
+          \item Implemented pipelines to retrieve road networks per country and compute distances between school and health facility coordinates extracted from large geospatial datasets 
+          \item Optimized algorithm performance to improve computation speed by hundreds of times across thousands of geospatial points by researching and incorporating fast Python libraries
+          \item Demoed solution to team members and published \href{https://github.com/unicef/magicbox-download-roads}{road retrieval code} to UNICEF's official GitHub
+          \item Provisioned a \href{https://hub.docker.com/r/msradam/magicbox-tools}{Docker image} bundled with pipeline code and requisite libraries intended for use by Magicbox developers and data scientists
         \end{itemize}
         
     }
@@ -264,47 +263,50 @@
     \expentry{June 2018}
     {August 2018}
     {Kurani Architecture}
-    {Software Developer, Intern}
+    {Software Development Intern}
     {\begin{itemize}
           \setlength\itemsep{-0.5mm}
-          \item Integrated Raspberry Pi sensor data and scraped content from TedEd and Khan Academy for "Aristotle", a prototype learning feed for classrooms and smart devices
-          \item Collaborated with CEO on IoT implementation in learning spaces 
+          \item Integrated Raspberry Pi sensor data and scraped content from TedEd and Khan Academy to prototype 'Aristotle', a responsive learning feed for classrooms and smart devices
+          \item Collaborated with CEO to brainstorm IoT implementation in learning spaces 
         \end{itemize}
     }
 
     \expentry{Sept. 2017}
     {Feb. 2019}
     {Wesleyan Local Food Co-Op}
-    {Programmer, Volunteer}
+    {Volunteer Programmer}
     {\begin{itemize}
           \setlength\itemsep{0.1mm}
-          \item Implemented web and command-line utilities to retrieve Qualtrics survey data, compute share prices for participants, and output a spreadsheet for co-op coordinators to determine total shares and money owed per-person
+          \item Implemented web and command-line utilities for Wesleyan's Local Food Cooperative, a student-run group that brings sustainable locally sourced food to the Wesleyan community
+          \item Retrieved Qualtrics survey data, computed share prices for participants, and outputted spreadsheets for co-op coordinators to determine total shares and money owed per-person
         \end{itemize}
     }
 
 
 
     \section{projects}
+        \projectentry{March 2025}
+        {AskStreets: Analyzing Street Networks With AI}
+        {ArangoDB, NetworkX, LangGraph | \href{https://github.com/msradam/askstreets}{github.com/msradam/askstreets}}
+        {\begin{itemize}
+            \setlength\itemsep{-0.5mm}
+            \item Developed an agentic AI app to parse natural language user queries, process graph structures built from OpenStreetMap, and execute graph algorithms to generate and visualize insights into street networks
+            \item Second Place Winner of ArangoDB and Nvidia's "Building the Next-Gen Agentic App with GraphRAG \& NVIDIA cuGraph" Hackathon, March 2025
+
+        \end{itemize}
+        } 
 
         \projectentry{March 2020}
         {HeatTweets: Geocoding Fire Incidents in NYC}
-        {Python, Twitter API, KeplerGl | \href{https://github.com/msradam/NYCFireData}{github.com/msradam/NYCFireData}}
+        {R, Python, KeplerGl | \href{https://github.com/msradam/NYCFireData}{github.com/msradam/NYCFireData}}
         {\begin{itemize}
             \setlength\itemsep{-0.5mm}
-            \item Worked in a team to scrape, geocode, and map fire incidents from Twitter using Python and KeplerGl
-            \item Presented at NYC's Open Data Week Hackathon "Can Data Start a Movement?" at Queens College, NY
+            \item Worked in a team to scrape, geocode, and map fire incidents from Twitter using R, Python, and KeplerGl
+            \item Presented at NYC's Open Data Week Hackathon: "Can Data Start a Movement?" at Queens College, NY
         \end{itemize}
         }
 
-        \projectentry{Sept. 2019}
-        {Wesleyan Theater DesignerBase}
-        {Flask, TypeForm, Google Sheets API | \href{https://github.com/msradam/wes-theater-designerbase}{github.com/msradam/wes-theater-designerbase}}
-        {\begin{itemize}
-            \setlength\itemsep{-0.5mm}
-            \item Developed a Flask web app for student theater organizations at Wesleyan University, intended for production teams to easily seek out designers and maintain a Google Sheets database
-            \item Integrated a TypeForm frontend with a Google Sheets backend to allow designers to register interest in design positions
-        \end{itemize}
-        }
+
 
         \projectentry{August 2019}
         {Carceral Contagion: Incarceration Simulation}
@@ -312,7 +314,7 @@
         {\begin{itemize}
             \setlength\itemsep{-0.5mm}
             \item Simulated an epidemiological model of U.S. mass incarceration based on historical data, illustrating racial disparities and the infectious nature of imprisonment
-            \item Modelled the population network with NetworkX graph data structures and implemented the frontend with the Mesa agent-based simulation library
+            \item Modelled the population network with NetworkX graph data structures and implemented an interactive frontend with the Mesa agent-based simulation library
             \item Project prototype earned Social Good Award + 2nd Place Crowd Favorite at Wellesley Hacks, Nov. 2017
         \end{itemize}
         }
@@ -322,8 +324,7 @@
         {Scikit-learn, Django, Docker, OpenAPI | \href{https://github.com/msradam/geospatial-routing-api}{github.com/msradam/geospatial-routing-api}}
         {\begin{itemize}
             \setlength\itemsep{-0.5mm}
-            \item Built upon my UNICEF internship project by implementing a geospatial distance calculation and road retrieval microservice with API endpoints to compute straight-line and routed distances between geographic coordinates and retrieve roads as graph data structures
-            \item Implemented Django backend and OpenAPI server as a frontend and documentation for API calls
+            \item Expanded upon my UNICEF internship project by implementing a microservice with API endpoints to compute straight-line and routed distances between geographic coordinates and retrieve roads as graph data structures, with a Django backend and Swagger UI to view endpoint documentation
         \end{itemize}
         }
 
@@ -333,8 +334,8 @@
             {Node.js, Express, React, MongoDB | \href{https://github.com/msradam/resp}{github.com/msradam/resp}}
             {\begin{itemize}
                 \setlength\itemsep{-0.5mm}
-                \item Implemented Express backend and React frontend with Typeform webhooks to check-in natural disaster survivors, store them in a MongoDB database, and query the Healthsites.io API for nearby facilities
-                \item Winner of the IBM Call for Code Challenge at AngelHack Manhattan
+                \item Worked in a team of software developers and UX designers to implement a React app with Typeform webhooks to check-in natural disaster survivors, store them in a MongoDB database, and query the open-source Healthsites.io API for nearby medical facilities
+                \item Winner of the IBM Call for Code Challenge at AngelHack Manhattan, June 2019
             \end{itemize}
             }
             
@@ -342,8 +343,8 @@
     \skillentry{languages}{Python, JavaScript (ES6+), Java, C, Bash, Markup: HTML5, CSS3, Markdown}
     \skillentry{concepts}{RESTful API Design/Integration, MVC Architecture, Agile}
     \skillentry{frameworks}{Docker, Kubernetes, Django, Flask, Express, React, Robot}
-    \skillentry{tools}{Git, GitHub, IBM Cloud, Ansible, Locust, Grafana k6}
-    \skillentry{data}{PostgreSQL, GraphQL, MongoDB, DB2}
+    \skillentry{tools}{Git, GitHub, Jenkins, IBM Cloud, Ansible, Locust, Grafana k6}
+    \skillentry{data}{PostgreSQL, GraphQL, MongoDB, IBM Db2}
     \skillentry{testing}{Unit, Integration, Regression, End-to-End, Load/Stress}
 
 \end{document}
