--- a/AdamRahman_Resume.tex
+++ b/AdamRahman_Resume.tex
@@ -11,8 +11,9 @@
 \usepackage{titlesec}
 \usepackage{colortbl}
 \usepackage{titling}
+\usepackage[rm]{roboto}
 % \usepackage{libertine}
-\usepackage[sfdefault]{roboto}
+% \usepackage[sfdefault]{equity}
 \usepackage{xifthen}
 \usepackage{hyperref}
 \usepackage{sqrcaps}
@@ -25,7 +26,7 @@
     urlcolor=blue,
 }
 
-\author{Adam Rahman}
+\author{Adam M. Rahman}
 
 % 
 % Title Command
@@ -49,11 +50,11 @@
 	\begin{minipage}[t]{.75\textwidth}
     \begin{center}
         \fontsize{15pt}{15pt}\selectfont\bfseries \theauthor \\
-        \fontsize{10pt}{15pt}\selectfont\sf
+        \fontsize{10pt}{15pt}\selectfont\normalfont
         \vspace{-0.5mm}
-        \href{mailto:munawaradamr@gmail.com}{munawaradamr@gmail.com} · (347) 593 7525 \\
+        \href{mailto:munawaradamr@gmail.com}{msrahmanadam@gmail.com} · (347) 593 7525 \\
         \vspace{-0.5mm}
-        Portfolio: \href{http://adamr.io}{adamr.io} · 
+        Portfolio: \href{https://adamr.io}{adamr.io} · 
         LinkedIn: \href{https://www.linkedin.com/in/adamsrahman/}{adamsrahman} · 
         GitHub: \href{https://github.com/msradam}{msradam}  \\ 
         \end{center}
@@ -185,11 +186,34 @@
     \section{education}
     \eduentry{Sept. 2016 -- May 2019}
     {Wesleyan University}
-    {B.A. Computer Science, Theater; 3.5/4.0}
-    {\\ Graduated May 2019; Patricelli Center Fellow; Deans' List \\
-    \textbf{Relevant Coursework:} Randomized Algorithms, Algorithms \& Complexity, Functional Programming, Computer Networks, Design of Programming Languages, Proseminar in Audiovisual Machine Learning}
+    {B.A. Computer Science, Theater; 3.4/4.0}
+    {\\ Graduated May 2019; Patricelli Center Fellow; Deans' List Spring 2017\\
+    \textbf{Relevant Coursework:} Randomized Algorithms, Algorithms \& Complexity, Functional Programming, \\ Computer Networks, Design of Programming Languages, Proseminar in Audiovisual Machine Learning}
 
     \section{work experience}
+    \expentry{July 2020}
+    {Present}
+    {IBM}
+    {Staff Software Developer}
+    {
+        \begin{itemize}
+          \setlength\itemsep{-0.5mm}
+            \item Develop, execute, and maintain continuous integration and regression tests
+            for z/OS mainframe software components, including Docker with Z Container
+            Extensions, OpenShift Container Platform on Z, and z/OS REST APIs
+            \item Orchestrated CI test automation infrastructure with Ansible and Jenkins to run
+            health checks and test workloads across a series of on-premise mainframe
+            test hardware
+            \item Developed and ported test utilities with Metal C, z/OS High Level Assembler, and Golang to exploit z/OS low-level components and execute test utilities like Grafana k6 on native hardware
+            \item Conduct daily monitoring and maintenance of mainframe test systems,
+            including mounting filesystems, installing products including Conda, Nodejs,
+            and OpenShift, and troubleshooting system dumps and traces in coordination
+            with other developers and tester
+        \end{itemize}
+        
+    }
+
+    
     \expentry{Sept. 2019}
     {Nov. 2019}
     {Buildly}
@@ -204,17 +228,6 @@
         
     }
 
-    \expentry{Sept. 2019}
-    {Nov. 2019}
-    {Kite}
-    {Code Curator}
-    {
-        \begin{itemize}
-          \setlength\itemsep{-0.5mm}
-          \item Composed over 30 code samples adhering to Python best practices to answer the most frequently asked programming questions
-         \end{itemize}
-        
-    }
 
     \expentry{Dec. 2018}
     {Feb. 2019}
@@ -238,31 +251,14 @@
     {\begin{itemize}
           \setlength\itemsep{-0.5mm}
           \item Integrated Raspberry Pi sensor data and IBM Watson Machine Learning predictions in prototype IoT dashboards
+          \item Prototyped learning feed with content scraped from TEDEd
           \item Pitched to and collaborated with CEO on IoT implementation in learning space architecture 
         \end{itemize}
     }
 
-    \expentry{Sept. 2017}
-    {Feb. 2019}
-    {Wesleyan Local Co-Op}
-    {Programmer}
-    {\begin{itemize}
-          \setlength\itemsep{-0.5mm}
-          \item Implemented web and command-line utilities to retrieve Qualtrics survey data, compute share prices for participants, and output a spreadsheet for co-op coordinators to determine total shares and money owed per-person
-        \end{itemize}
-    }
 
     \section{projects}
 
-
-        \projectentry{August 2019}
-        {Curbside Chaos: Mapping Street Utilization in NYC}
-        {Pandas, Shapely, React}
-        {\begin{itemize}
-            \setlength\itemsep{-0.5mm}
-            \item Implemented solution to \href{https://kepler.gl/demo/map?mapUrl=https://dl.dropboxusercontent.com/s/u3st74ltz03hr4s/keplergl_9f6lhlq.json}{geocode and visualize over 30,000 location points} from NYC OpenData's parking location and 311 report datasets to map street and curbside usage by district, completed for BetaNYC's Mobility for All Abilities Hackathon
-        \end{itemize}
-        }
 
         \projectentry{July 2019}
             {Magicbox Geospatial Routing API}
